# conflux

./: .clang-format  .envrc  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  justfile  package.xml
config/: example.yaml
config/examples/: multi_sensor_fusion.yaml  offline_exact_match.yaml  stereo_camera.yaml
config/presets/: high_frequency.yaml  low_frequency.yaml
conflux_cpp/: .gitignore  CMakeLists.txt  package.xml
conflux_cpp/examples/: sync_node.cpp
conflux_cpp/include/: conflux_ffi.h
conflux_cpp/include/conflux/: synchronizer.hpp  types.hpp  visibility.h
conflux_cpp/rust/: Cargo.toml  build.rs  cbindgen.toml
conflux_cpp/rust/src/: lib.rs
conflux_cpp/src/: ffi_bridge.cpp  ffi_bridge.hpp  synchronizer.cpp
conflux_node/: Cargo.toml
conflux_node/config/: example.yaml
conflux_node/config/examples/: low_frequency_localization.yaml  multi_sensor_fusion.yaml  offline_exact_match.yaml  realtime_camera_lidar.yaml  stereo_camera.yaml
conflux_node/config/presets/: batch_processing.yaml  high_frequency.yaml  low_frequency.yaml
conflux_node/launch/: multi_sensor_fusion.launch.xml  stereo_camera.launch.xml
conflux_node/src/: config.rs  lib.rs  main.rs  node.rs
conflux_py/: .gitignore  README.md  package.xml  pyproject.toml  setup.cfg  setup.py
conflux_py/conflux_py/: __init__.py  _conflux_py.pyi  _core.py  _ffi.py  synchronizer.py
conflux_py/examples/: sync_node.py
conflux_py/rust/: Cargo.toml
conflux_py/rust/src/: lib.rs
conflux_py/test/: test_synchronizer.py
crates/conflux-core/: .gitignore  ALGORITHM.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md
crates/conflux-core/examples/: simple.rs
crates/conflux-core/license/: LICENSE-APACHE  LICENSE-MIT
crates/conflux-core/src/: buffer.rs  config.rs  lib.rs  staleness.rs  state.rs  sync.rs  types.rs  utils.rs
crates/conflux-core/tests/: advanced_edge_case_tests.rs  buffer_and_error_tests.rs  common.rs  realistic_timing_tests.rs  staleness_basic_tests.rs  staleness_integration_tests.rs  staleness_tokio_tests.rs  stress_tests.rs  three_stream_tests.rs  timeout_tests.rs  two_stream_tests.rs
crates/conflux-ros2/: Cargo.toml
crates/conflux-ros2/src/: lib.rs  message.rs  ros2_message.rs  ros2_publisher.rs  ros2_sync_node.rs  ros2_sync_state.rs  subscriber.rs
docs/roadmap/: overview.md  phase-1-workspace-setup.md  phase-2-ros2-library.md  phase-3-cpp-bindings.md  phase-4-python-bindings.md  phase-5-structure-cleanup.md  phase-6-drop-policy-and-infinite-window.md
launch/: conflux.launch.xml  low_frequency_localization.launch.xml  msync.launch.xml  multi_sensor_fusion.launch.xml  offline_sync.launch.xml  realtime_sync.launch.xml  stereo_camera.launch.xml
nodes/conflux-node/: Cargo.toml  package.xml
nodes/conflux-node/config/examples/: realtime_camera_lidar.yaml
nodes/conflux-node/launch/: offline_sync.launch.xml  realtime_sync.launch.xml
nodes/conflux-node/src/: config.rs  main.rs
src/: config.rs  lib.rs  main.rs  message.rs  message_impl.rs  node.rs  subscriber.rs  traits.rs
test/: test_all_launches.sh  test_basic_launch.sh  test_launch_quick.sh
