[workspace]
resolver = "2"
members = [
    "crates/conflux-core",
]
# Exclude ROS2 crates from workspace - they have wildcard dependencies (*) that
# get patched by colcon at build time. Build with: just build
exclude = [
    "crates/conflux-ros2",
    "nodes/conflux-node",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jerry73204/conflux"

[workspace.dependencies]
# Internal crates
conflux-core = { path = "crates/conflux-core" }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
futures = "0.3"

# Error handling & logging
eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
humantime-serde = "1.1"
indexmap = { version = "2", features = ["serde"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
itertools = "0.11"
flume = "0.11"
collected = "0.4"

[profile.test-release]
inherits = "release"
debug = true
