<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>conflux_cpp</name>
  <version>0.2.0</version>
  <description>C++ library for multi-stream message synchronization</description>

  <maintainer email="todo@example.com">TODO</maintainer>
  <license>MIT</license>
  <license>Apache-2.0</license>

  <url type="repository">https://github.com/jerry73204/conflux</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
