[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "conflux_py"
version = "0.2.0"
description = "Python library for multi-stream message synchronization"
readme = "README.md"
license = {text = "MIT OR Apache-2.0"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
ros2 = ["rclpy"]

[tool.maturin]
# Build the Rust crate located in rust/
manifest-path = "rust/Cargo.toml"
# Python module location
python-source = "."
# Module name
module-name = "conflux_py._conflux_py"
# Features
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["test"]
