[package]
name = "conflux-ros2"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jerry73204/conflux"
description = "ROS2 integration utilities for conflux multi-stream synchronization"
readme = "README.md"

[dependencies]
# Core synchronization algorithm
conflux-core = { path = "../conflux-core", features = ["tokio"] }

# Async runtime
tokio = { version = "1", features = ["sync"] }

# ROS2 client library (using commit 562e815 for DynamicMessage/DynamicSubscription support)
rclrs = { git = "https://github.com/ros2-rust/ros2_rust", rev = "562e815" }

# ROS2 message types (versions patched by ros2_cargo_config.toml)
builtin_interfaces = "*"

# Error handling & logging
eyre = "0.6"
tracing = "0.1"

# Utilities
indexmap = { version = "2", features = ["serde"] }

[profile.test-release]
inherits = "release"
debug = true
