[package]
name = "conflux-ros2"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jerry73204/conflux"
description = "ROS2 integration utilities for conflux multi-stream synchronization"
readme = "README.md"

[dependencies]
# Core synchronization algorithm
conflux-core = { path = "../conflux-core", features = ["tokio"] }

# Async runtime
tokio = { version = "1", features = ["sync"] }

# ROS2 client library
rclrs = "0.7"

# ROS2 message types (versions patched by ros2_cargo_config.toml)
builtin_interfaces = "*"

# Error handling & logging
eyre = "0.6"
tracing = "0.1"

# Utilities
indexmap = { version = "2", features = ["serde"] }

[profile.test-release]
inherits = "release"
debug = true
